# celerpy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup-repo/: action.yml
.github/workflows/: lockfiles.yaml  lockfiles.yml  pr.yml  pull_request.yml  push.yml  pypi.yaml  pypi.yml  test.yaml  test.yml
celerpy/: __init__.py  cli.py  model.py  process.py  settings.py  visualize.py
celerpy/_resources/: README.md  __init__.py  glasbey-dark.txt  glasbey-light.txt
celerpy/conf/: settings.py
celerpy/model/: __init__.py  input.py  output.py  types.py
docs/dev/: cli.md  settings.md
test/: test_model.py  test_process.py  test_settings.py  test_visualize.py
tests/: __init__.py
