[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = [
  "poetry-core>=2.0.0,<3.0.0",
  "poetry-dynamic-versioning>=1.9.1,<2.0.0"
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.poetry]
authors = ["Seth R. Johnson et al."]
description = "Python front end to Celeritas"
license = "Apache-2.0"
name = "celerpy"
packages = [{include = "celerpy"}]
readme = "README.md"
requires-plugins = {poetry-dynamic-versioning = {extras = ["plugin"], version = ">=1.9.1,<2.0.0"}}
version = "0.1.0-dev"

[tool.poetry.dependencies]
matplotlib = ">=3.7"
numpy = ">=1.20"
pydantic = ">=2.0,<3.0"
pydantic-settings = ">=2.0,<3.0"
python = ">=3.11,<4.0"
typer = "*"

# Developer dependencies: note that style is handled by pre-commit
[tool.poetry.group.dev.dependencies]
mypy = ">=1.18"
pre-commit = ">=4.3"
pytest = ">=8.4"
pytest-cov = ">=7"

[tool.poetry.scripts]
celerpy = "celerpy.cli:app"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"

[tool.ruff]
indent-width = 4
line-length = 80

[tool.ruff.lint]
ignore = [
  # TODO: remove once we adopt this pyupgrade rewrite style.
  "B905",
  "UP007",
  "UP045"
]
select = [
  "B", # flake8-bugbear
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "SIM", # flake8-simplify
  "UP" # pyupgrade
]

[tool.tomlsort]
all = true
no_comments = false
