[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = [
  "poetry-core>=2.0.0,<3.0.0",
  "poetry-dynamic-versioning>=1.9.1,<2.0.0"
]

[project]
authors = [{email = "johnsonsr@ornl.gov", name = "Seth R. Johnson"}]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.20",
  "pydantic-settings>=2.0,<3.0",
  "pydantic>=2.0,<3.0",
  "typer"
]
description = "Python front end to Celeritas"
dynamic = ["version"]
license = "Apache-2.0"
name = "celerpy"
packages = [{include = "celerpy"}]
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "0.0.0" # Automatically updated via poetry-dynamic-versioning

[project.scripts]
celerpy = "celerpy.cli:app"

[tool.mypy]
plugins = ["pydantic.mypy"]

# Developer dependencies: note that style is handled by pre-commit
[tool.poetry.group.dev]
include-groups = [
  "test"
]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.3"

# Testing
[tool.poetry.group.test.dependencies]
mypy = ">=1.18"
pytest = ">=8.4"
pytest-cov = ">=7"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = {extras = ["plugin"], version = ">=1.0.0,<2.0.0"}

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"

[tool.ruff]
indent-width = 4
line-length = 80

[tool.ruff.lint]
ignore = [
  # TODO: remove once we adopt this pyupgrade rewrite style.
  "B905",
  "UP007",
  "UP045"
]
select = [
  "B", # flake8-bugbear
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "SIM", # flake8-simplify
  "UP" # pyupgrade
]

[tool.tomlsort]
all = true
no_comments = false
